# pipefy-mcp-server

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  bootstrap.sh  comments.json  pyproject.toml
.cursor/dev-planning/code-review/: pipe-full-toolset-vs-main-phase-3.md
.github/workflows/: ci.yml
docs/: configuration.md  dependencies.md  mcp-client-setup.md  setup.md
docs/tools/: automations-and-ai.md  card-relations-testing.md  cross-cutting.md  database-tables.md  introspection.md  members-email-webhooks.md  observability.md  organization.md  pipes-and-cards.md  relations.md  reports.md
scripts/: smoke_test_refactor.py  verify_get_cards_include_fields.py
specs/: PROCESS.md
specs/pipe-building/: spec-pipe-building.md
specs/pipe-building/tasks/: [code-review]feat-pipe-building.md  tasks-pipe-building.md
specs/pipeclaw-full-toolset/: prd-pipeclaw-full-toolset.md
specs/schema-introspection/: spec-schema-introspection.md
specs/schema-introspection/tasks/: [code-review]feat-schema-introspection.md  tasks-schema-introspection.md
src/pipefy_mcp/: __init__.py  main.py  server.py  settings.py
src/pipefy_mcp/core/: container.py  fastmcp_tool_lifecycle.py  pipefy_tool_lifecycle.py
src/pipefy_mcp/models/: __init__.py  ai_agent.py  ai_automation.py  attachment.py  comment.py  form.py  send_task_automation.py  validators.py
src/pipefy_mcp/prompts/: pipe_prompts.py
src/pipefy_mcp/services/pipefy/: __init__.py  ai_agent_service.py  ai_automation_service.py  attachment_service.py  automation_graphql_types.py  automation_service.py  base_client.py  card_service.py  client.py  types.py  (+13 more)
src/pipefy_mcp/tools/: __init__.py  ai_agent_tools.py  ai_automation_tools.py  ai_tool_helpers.py  attachment_tool_helpers.py  attachment_tools.py  automation_tool_helpers.py  automation_tools.py  behavior_placeholder_interpolation.py  database_tools.py  destructive_tool_guard.py  field_condition_tools.py  graphql_error_helpers.py  introspection_tool_helpers.py  introspection_tools.py  mcp_capabilities.py  member_tool_helpers.py  member_tools.py  observability_tool_helpers.py  observability_tools.py  organization_tools.py  pagination_helpers.py  phase_transition_helpers.py  pipe_config_tool_helpers.py  pipe_config_tools.py  pipe_config_validators.py  pipe_tool_helpers.py  pipe_tools.py  registry.py  relation_tool_helpers.py  relation_tools.py  report_tool_helpers.py  report_tools.py  table_tool_helpers.py  table_tools.py  tool_error_envelope.py  transition_hints.py  validation_envelope.py  validation_helpers.py  webhook_tool_helpers.py  (+1 more)
tests/: __init__.py  ai_agent_test_payloads.py  conftest.py  integration_helpers.py  pagination_test_defaults.py  test_main.py  test_pipefy_client.py  test_server.py  test_settings.py
tests/core/: test_container.py
tests/models/: test_ai_agent.py  test_ai_automation.py  test_attachment.py  test_comment.py  test_form.py  test_send_task_automation.py  test_validators.py
tests/services/: test_ai_agent_service.py  test_ai_automation_service.py  test_attachment_service.py  test_card_service.py  test_database_service.py  test_internal_api_client.py  test_pipe_service.py  test_pipefy_base_client.py  test_pipefy_client.py  test_pipefy_facade.py  test_pipefy_formatters.py  test_pipefy_services.py  test_pipefy_types.py  test_table_service.py  test_table_service_search_tables.py
tests/services/pipefy/: test_automation_service.py  test_member_service.py  test_observability_export_csv.py  test_observability_service.py  test_organization_service.py  test_pipe_config_service.py  test_relation_service.py  test_report_service.py  test_schema_introspection_integration.py  test_schema_introspection_service.py  test_table_service.py  test_url_ssrf.py  test_webhook_service.py
tests/tools/: conftest.py  test_add_card_comment_tool.py  test_ai_agent_tools.py  test_ai_automation_tools.py  test_ai_automation_tools_live.py  test_ai_tool_helpers.py  test_ai_tool_helpers_slug_resolution.py  test_attachment_tool_helpers.py  test_attachment_tools.py  test_attachment_tools_live.py  test_automation_tools.py  test_behavior_placeholder_interpolation.py  test_database_tools.py  test_destructive_preview_dependents.py  test_destructive_tool_guard.py  test_docstring_discovery_hints.py  test_field_condition_tools.py  test_field_conditions_tools_live.py  test_graphql_error_enrichment.py  test_graphql_error_helpers.py  test_introspection_scenarios.py  test_introspection_tools.py  test_introspection_tools_live.py  test_mcp_capabilities.py  test_member_tools.py  test_observability_tools.py  test_organization_tools.py  test_pagination_helpers.py  test_phase_transition_helpers.py  test_pipe_config_tool_helpers.py  test_pipe_config_tools.py  test_pipe_config_tools_live.py  test_pipe_tool_helpers.py  test_pipe_tools.py  test_registry.py  test_relation_tools.py  test_report_tool_helpers.py  test_report_tools.py  test_table_tools.py  test_task6_mcp_signoff_live.py  (+5 more)
(+20 files in other folders)
