[project]
name = "pipefy-mcp-server"
version = "0.1.0"
description = "Pipefy MCP server that enables AI Agents to end-to-end manage your Pipefy pipes, create cards, and more."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gql[httpx]>=3.5.2",
    "httpx-auth>=0.23.1",
    "mcp[cli]>=1.25.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "rapidfuzz>=3.14.3",
]

[project.scripts]
pipefy-mcp-server = "pipefy_mcp.main:main"

[dependency-groups]
dev = [
    "aiohttp>=3.11.16",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "ruff>=0.11.4",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipefy_mcp"]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "src/pipefy_mcp/_version.py"

[tool.ruff]
lint.extend-select = ["I"]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --no-header --tb=short"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"

markers = [
    "unit: marks a test as a unit test",
    "integration: marks a test as an integration test that requires database access"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
