[project]
name = "pipeclaw"
description = "Pipeclaw — MCP server for Pipefy: AI agents manage pipes, cards, fields, automations, and schema discovery with safety controls."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
keywords = ["pipefy", "mcp", "model-context-protocol", "ai-agents", "automation", "pipeclaw"]
# Set at build time from git tags via hatch-vcs (see [tool.hatch.version]).
dynamic = ["version"]
dependencies = [
    "gql[httpx]>=3.5.2",
    "httpx-auth>=0.23.1",
    "mcp[cli]>=1.25.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "rapidfuzz>=3.14.3",
]

[project.urls]
Homepage = "https://gitlab.com/pipefy/vibe-coding/pipeclaw"
Repository = "https://gitlab.com/pipefy/vibe-coding/pipeclaw.git"
Issues = "https://gitlab.com/pipefy/vibe-coding/pipeclaw/-/issues"

[project.scripts]
pipeclaw = "pipefy_mcp.main:main"

[dependency-groups]
dev = [
    "aiohttp>=3.11.16",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "ruff>=0.15.6",
]

[tool.uv]
required-version = ">=0.5"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipefy_mcp"]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "src/pipefy_mcp/_version.py"

[tool.ruff]
lint.extend-select = ["I"]
lint.exclude = ["src/pipefy_mcp/_version.py"]
format.exclude = ["src/pipefy_mcp/_version.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --no-header --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
markers = [
    "unit: marks a test as a unit test",
    "integration: marks tests that need live services (e.g. Pipefy API + OAuth in .env)",
]
